tests/src/Invalids/invalids_suite.ads
with AUnit.Test_Suites; use AUnit.Test_Suites;

package Invalids_Suite is

   function Suite return Access_Test_Suite;

end Invalids_Suite;
